# voyage

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Dioxus.toml  README.md  flake.nix  input.css  justfile  openapi.json  package-lock.json  package.json  tailwind.config.js
.github/workflows/: ci.yml
android/: AndroidManifest.xml
assets/: tailwind.css
assets/styling/: main.css
scripts/: generate_api_types.py
src/: api.rs  config.rs  main.rs  notification.rs  trip_creation.rs  types.rs  voyage_api.rs  voyage_client.rs
src/components/: app_header.rs  bottom_nav.rs  bottom_sheet.rs  discovery_banner.rs  email_detail_card.rs  email_list_item.rs  filter_chips.rs  hero_header.rs  mod.rs  search_bar.rs  setup_modal.rs  status_badge.rs  suggested_email_card.rs  timeline_item.rs  toast.rs  trip_card.rs  trip_chip.rs
src/views/: email_detail.rs  email_list.rs  home.rs  itinerary.rs  mod.rs  navbar.rs  settings.rs  trips.rs
